removed css scroll smooth effect due to issue on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,6 @@
 
 html,
 body {
-  scroll-behavior: smooth;
   height: 100%;
   margin: 0;
   padding: 0;
